--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 <body>
 	<!-- PLease only edit this file for this asssignment. Thanks!-->
 	
-	 <h1>Hello, HTML elements!</h1>
+	 <h1>Hello</h1>
 </body>
 
 </html>
